[package]
name = "lights"
version = "0.1.0"
authors = ["sodillen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] } 
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
#iced = { version = "0.2.0", features = ["glow", "glow_canvas", "tokio", "debug"] }
#chrono = "0.4"
fltk = { version = "^0.13", features = ["no-pango"] }
rand = "0.8.2"
rs_ws281x = "0.4.2"
image = { version = "0.23.12", features = ["gif"] }
